--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,18 @@
 <h1 style="text-align: center;">My Bus Reservation</h1> 
 <br/>
-<a routerLink="/login"  class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a routerLink="/signup" class="btn btn-success">Signup</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a routerLink="/contactus" class="btn btn-warning">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a routerLink="/aboutus" class="btn btn-info">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<a routerLink="/privacypolicy" class="btn btn-danger">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;
-<!-- sahana's -->
+
+    <a routerLink="/login"  class="btn btn-info">Login</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="/signup" class="btn btn-success">Signup</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="/contactus" class="btn btn-warning">Contact Us</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="/aboutus" class="btn btn-info">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="/privacypolicy" class="btn btn-danger">Privacy Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;
+    <!-- sahana's -->
 
 
 <a routerLink="/adminlogin" class="btn btn-info">Login As Admin</a>
 <br/>
+<!-- <img src="assets/bus1.jpg/" style="height: 750px; width: 1510px;"> -->
 <router-outlet></router-outlet>
+
+
+
